# eq10q-fork

./: .gitignore  CMakeLists.txt  eq.c  fbdm.ttl  fbds.ttl  filter_type.h  manifest.ttl  uris.h
dsp/: CMakeLists.txt  fft.c  fft.h  filter.c  filter.h  vu.c  vu.h
eq10q/: SVN.txt
eq10q/svn/: eq_type.h
gui/: CMakeLists.txt  eq10q_ui.cpp  eq_defines.h  guitester.cpp  guitester.h
gui/widgets/: CMakeLists.txt  bandctl.cpp  bandctl.h  bodeplot.cpp  bodeplot.h  eqparams.cpp  eqparams.h  eqwindow.cpp  eqwindow.h  vuwidget.cpp  vuwidget.h
tags/trunk/dsp/: smooth.c
tags/v2-beta6/: gate.ttl
tags/v2-beta6/gui/widgets/: gainctl.cpp  vuwidget.h
tags/v2-beta7.1/gui/widgets/: knob.h  sidechainbox.cpp
tags/v2-beta7/gui/widgets/: knob2.h
